[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/features/life_tracker/components/tracker_menu_overlay.gd" id="1_overlay"]

[node name="TrackerMenuOverlay" type="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_overlay")

[node name="InputBlocker" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
z_index = 20

[node name="MenuPanel" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_right = 0.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = 24.0
offset_right = 256.0
offset_bottom = -24.0
z_index = 30

[node name="MenuPanelMargin" type="MarginContainer" parent="MenuPanel"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="MenuActions" type="VBoxContainer" parent="MenuPanel/MenuPanelMargin"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="MainMenuActionButton" type="Button" parent="MenuPanel/MenuPanelMargin/MenuActions"]
custom_minimum_size = Vector2(190, 44)
layout_mode = 2
text = "Main Menu"

[node name="NewGameActionButton" type="Button" parent="MenuPanel/MenuPanelMargin/MenuActions"]
custom_minimum_size = Vector2(190, 44)
layout_mode = 2
text = "New Game"

[node name="MenuButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = 30.0
focus_mode = 0
text = ""
z_index = 40

[node name="MenuGlyph" type="Label" parent="MenuButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.96)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.3)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1
text = "â˜°"
